--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             z-index: 3;
         }
         .main .logo.cursive{
-            font-family: 'Grand Hotel',cursive;
+            font-family: 'Lobster', cursive;
             font-size: 82px;
 
         }
@@ -114,7 +114,7 @@
 
     <!--     Fonts     -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
 </head>
 
