--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
         </h1>
         
     </div>
-    <footer>ErpPython</footer>
+    <div class="footer">
+        ErpPython
+    </div>
     
 </div>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
