--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         .main .logo.cursive{
             font-family: 'Lobster', cursive;
             font-size: 82px;
-            marzin-top: 20px;
+            marzin-top: 50px;
 
         }
 
@@ -114,7 +114,9 @@
         
     </div>
     <div class="footer">
-        ErpPython
+        <div class="container">
+            ErpPython
+        </div>
     </div>
     
 </div>
