--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         .main .logo.cursive{
             font-family: 'Lobster', cursive;
             font-size: 82px;
-            marzin-top: 50px;
+            margin-top: 50px;
 
         }
 
@@ -91,7 +91,7 @@
             right: 0;
             width: 100%;
             font-size: 20px;
-            color: #000;
+            color: #fff;
             text-align: center;
             margin-top: 20px;
         }
