--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             background-image: url('https://i.postimg.cc/2SxJJXpF/coming-soon-5152487-1280.png');
             background-position: center center;
             background-size: cover;
+            width: 100vw;
             height: 100vh;
             left: 0;
             min-height: 100%;
